--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="DarkGrayMatte">#262223</color>
+    <color name="BlueFB">#4267B2</color>
 
     <color name="Ivory">#FFFFF0</color>
     <color name="LightYellow">#FFFFE0</color>
